# localwise

./: .gitignore  MANIFEST.in  README.md  app.py  ingest.py  requirements.txt  run_tests.py  setup.cfg  setup.py
docs/: ARCHITECTURE_MINDMAP.md  CHANGELOG.md  DOCUMENTATION_INDEX.md  QA_DOCUMENTATION.md  TEAM_WORKFLOW.md  TEST_EXECUTION_GUIDE.md  TEST_PLAN.md
documents/: LocalWiseTest.java  TEXT_PROCESSING_TEST.md  localwise_test_queries.sql  plain_text_test.txt  test_python_processing.py
localwise/: __init__.py  config.py
localwise/cli/: __init__.py  cli_interface.py
localwise/core/: __init__.py  embedding_service.py  file_processors.py  query_engine.py
localwise/data/: __init__.py  change_detector.py  data_manager.py  file_manifest.py
localwise/ui/: __init__.py  ui_components.py
tests/: conftest.py
tests/fixtures/: README.md
tests/fixtures/sample_documents/: README.md  app_config.yaml  config.json  employees.csv  generate_samples.py  library.xml  sample_code.py  sample_text.txt
tests/integration/: test_end_to_end.py
tests/performance/: test_performance.py
tests/unit/: test_data_management.py  test_file_processors.py
