[metadata]
name = localwise
version = attr: localwise.__version__
author = LocalWise Development Team
author_email = dev@localwise.ai
description = Your AI Knowledge Assistant - Transform documents into intelligent knowledge bases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/localwise/localwise
project_urls =
    Bug Tracker = https://github.com/localwise/localwise/issues
    Documentation = https://github.com/localwise/localwise/wiki
    Source Code = https://github.com/localwise/localwise
    Changelog = https://github.com/localwise/localwise/blob/main/CHANGELOG.md
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Office/Business :: Office Suites
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Text Processing :: General
    Topic :: Database
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Environment :: Console
    Environment :: Web Environment

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires = file: requirements.txt

[options.packages.find]
exclude =
    tests*
    docs*
    build*
    dist*

[options.entry_points]
console_scripts =
    localwise = localwise.cli.cli_interface:main
    localwise-process = localwise.cli.cli_interface:process_command
    localwise-serve = localwise.cli.cli_interface:serve_command

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0
    pre-commit>=3.0.0
    ipython>=8.0.0
docs =
    sphinx>=5.0.0
    sphinx-rtd-theme>=1.2.0
    myst-parser>=1.0.0
    sphinx-autodoc-typehints>=1.19.0
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0
    requests-mock>=1.9.0

[options.package_data]
localwise =
    data/*.json
    ui/templates/*.html
    cli/examples/*.txt

[bdist_wheel]
universal = 0

[build_sphinx]
source-dir = docs/
build-dir = docs/_build

[flake8]
max-line-length = 88
extend-ignore = E203, E501, W503
exclude = build,dist,.git,__pycache__,.tox,.venv,venv

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True

[coverage:run]
source = localwise
omit = 
    */tests/*
    */test_*
    setup.py
    */venv/*
    */build/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError